CSS 전부 삭제 및 모바일로 다시 작업

--- a/index.html
+++ b/index.html
@@ -10,11 +10,40 @@
     <div id="bgimg">
       <div id="upper">
         <div id="location_container">
-          <div id="location_content"></div>
-          <div id="location_text"></div>
+          <div id="location_content">
+            <div id="location_icon">
+              <img src="" alt="" />
+            </div>
+            <div id="location_temp">1°</div>
+          </div>
+          <div id="location_text">seoul</div>
         </div>
       </div>
-      <div id="middle"></div>
+      <div id="middle">
+        <div id="main_container">
+          <div id="clock_content">
+            <div class="clock">
+              <span class="hour">12</span>
+              <span class="colon"> : </span>
+              <span class="minute">00</span>
+            </div>
+            <div id="greet_content">
+              <span class="greet">Goog moring, panda.</span>
+            </div>
+          </div>
+          <div id="wise_saying">
+            <div id="">
+              <div>
+                <span>What is your main goal for today?</span>
+              </div>
+              <div>
+                <input type="text" />
+              </div>
+              <div></div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div id="lower"></div>
     </div>
   </body>
