background 이미지 및 명언 영역

--- a/index.html
+++ b/index.html
@@ -28,23 +28,34 @@
               <span class="minute">00</span>
             </div>
             <div id="greet_content">
-              <span class="greet">Goog moring, panda.</span>
+              <span class="greet">Goog moring,</span>
+              <span>panda</span>
             </div>
           </div>
-          <div id="wise_saying">
-            <div id="">
-              <div>
-                <span>What is your main goal for today?</span>
+          <div id="text_contanier">
+            <div id="today_content">
+              <div class="ddd">
+                <span class="today_title">What is your main goal for today?</span>
+                <input class="today" type="text" />
               </div>
-              <div>
-                <input type="text" />
+            </div>
+            <div id="wish_saying">
+              <div class="saying-content">
+                <p>qweqweqweqweqw</p>
               </div>
-              <div></div>
             </div>
           </div>
         </div>
       </div>
-      <div id="lower"></div>
+      <div id="lower">
+        <dialog>
+          <header>TODOLIST</header>
+          <div>
+            <p>리스트를 추가하세요</p>
+            <button></button>
+          </div>
+        </dialog>
+      </div>
     </div>
   </body>
 </html>
