js 생성 및 레이아웃 작업

--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="javascript.js"></script>
     <title>Document</title>
   </head>
   <body>
-    <div id="bgimg">
+    <div class="bgimg">
       <div id="upper">
         <div id="location_container">
           <div id="location_content">
-            <div id="location_icon">
-              <img src="" alt="" />
-            </div>
-            <div id="location_temp">1°</div>
+            <div id="location_icon"></div>
+            <div id="location_temp">2°</div>
           </div>
-          <div id="location_text">seoul</div>
         </div>
       </div>
       <div id="middle">
@@ -35,13 +33,15 @@
           <div id="text_contanier">
             <div id="today_content">
               <div class="ddd">
-                <span class="today_title">What is your main goal for today?</span>
+                <span class="today_title"
+                  >What is your main goal for today?</span
+                >
                 <input class="today" type="text" />
               </div>
             </div>
             <div id="wish_saying">
               <div class="saying-content">
-                <p>qweqweqweqweqw</p>
+                <p>"곧 봄이 오겠지"</p>
               </div>
             </div>
           </div>
