--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
           <div id="text_contanier">
             <div id="today_content">
               <div class="ddd">
-                <span class="today_title"
-                  >What is your main goal for today?</span
-                >
+                <span class="today_title">
+                  What is your main goal for today?
+                </span>
                 <input class="today" type="text" />
               </div>
             </div>
@@ -48,11 +48,14 @@
         </div>
       </div>
       <div id="lower">
+        <img src="image/check.png" alt="" />
         <dialog>
-          <header>TODOLIST</header>
           <div>
-            <p>리스트를 추가하세요</p>
-            <button></button>
+            <header>TODOLIST</header>
+            <div>
+              <p>리스트를 추가하세요</p>
+              <button></button>
+            </div>
           </div>
         </dialog>
       </div>
