--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
             <div id="location_temp">2°</div>
           </div>
         </div>
+        <div id="chrome_container">
+          <div id="chrome_content">
+            <div id="link_img">
+              <img src="" alt="이미지" />
+            </div>
+          </div>
+        </div>
       </div>
       <div id="middle">
         <div id="main_container">
           <div id="clock_content">
             <div class="clock">
               <span class="hour">12</span>
-              <span class="colon"> : </span>
+              <span class="colon">:</span>
               <span class="minute">00</span>
             </div>
             <div id="greet_content">
